deployment/assignments-get.yaml
---
###################################
# assignments-get 
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignments-get
  labels:
    app: assignments-get
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignments-get
  template:
    metadata:
      labels:
        app: assignments-get
    spec:
      containers:
        - name: assignments-get
          image: gcr.io/abc-jobs-miso/assignments-get:1.0
          volumeMounts:
            - name: service-account-credentials
              mountPath: "/etc/credentials"
              readOnly: true
          ports:
            - containerPort: 3008
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
      imagePullSecrets:
        - name: gcr-access-token
      volumes:
        - name: service-account-credentials
          secret:
            secretName: service-account-credentials

---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: assignments-get-config
#spec:
##  healthCheck:
#    checkIntervalSec: 30
#    port: 3000
#    type: HTTP
#    requestPath: /assignments-get/ping
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-assignments-get
  annotations:
    cloud.google.com/backend-config: '{"default": "assignments-get-config"}'
spec:
  type: NodePort
  selector:
    app: assignments-get
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3008
      nodePort: 31026
      
---
