deployment/interviews.yaml
---
###################################
# interviews 
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interviews
  labels:
    app: interviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interviews
  template:
    metadata:
      labels:
        app: interviews
    spec:
      containers:
        - name: interviews
          image: gcr.io/abc-jobs-miso/interviews:1.0
          volumeMounts:
            - name: service-account-credentials
              mountPath: "/etc/credentials"
              readOnly: true
          ports:
            - containerPort: 3003
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
      imagePullSecrets:
        - name: gcr-access-token
      volumes:
        - name: service-account-credentials
          secret:
            secretName: service-account-credentials

---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: interviews-config
#spec:
##  healthCheck:
#    checkIntervalSec: 30
#    port: 3000
#    type: HTTP
#    requestPath: /interviews/ping
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-interviews
  annotations:
    cloud.google.com/backend-config: '{"default": "interviews-config"}'
spec:
  type: NodePort
  selector:
    app: interviews
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 31021
      
---
