deployment/ingress.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  namespace: default
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service/public/validate"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization, X-User-Roles"

spec:
  tls:
    - secretName: letsencrypt-prod
  ingressClassName: external-nginx
  rules:
    - host: "34.171.225.63.nip.io"
      http:
        paths:
          - path: /public
            pathType: Prefix
            backend:
              service:
                name: servicio-public
                port:
                  number: 80
          - pathType: Prefix
            path: /users
            backend:
              service:
                name: servicio-users
                port: 
                  number: 80
          - pathType: Prefix
            path: /assignments
            backend:
              service:
                name: servicio-assignments
                port: 
                  number: 80
          - pathType: Prefix
            path: /companies
            backend:
              service:
                name: servicio-companies
                port: 
                  number: 80
          - pathType: Prefix
            path: /interviews
            backend:
              service:
                name: servicio-interviews
                port: 
                  number: 80
